// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapToProjectDto should map the node to a subset of the project dto 1`] = `
{
  "claimedPercentage": 90,
  "claimsToReview": 3,
  "competitionType": "CR&D",
  "id": "0",
  "projectNumber": "2345",
  "roles": {
    "isAssociate": false,
    "isFc": true,
    "isMo": false,
    "isPm": false,
  },
  "status": 0,
  "title": "Allan's Plans",
}
`;

exports[`mapToProjectDto should map the node to the projectDto structure 1`] = `
{
  "claimedPercentage": 90,
  "claimsOverdue": 1,
  "claimsToReview": 3,
  "competitionType": "CR&D",
  "costsClaimedToDate": 90000,
  "endDate": 2024-03-24T00:00:00.000Z,
  "grantOfferLetterCosts": 100000,
  "id": "0",
  "impactManagementParticipation": "Yes",
  "isActive": true,
  "isPastEndDate": false,
  "leadPartnerName": "",
  "numberOfOpenClaims": 1,
  "numberOfPeriods": 12,
  "partnerRoles": [
    {
      "isAssociate": false,
      "isFc": true,
      "isMo": false,
      "isPm": false,
      "partnerId": "1",
    },
  ],
  "pcrsQueried": 2,
  "pcrsToReview": 1,
  "periodEndDate": 2022-03-24T00:00:00.000Z,
  "periodId": 1,
  "periodStartDate": 2022-01-24T00:00:00.000Z,
  "projectNumber": "2345",
  "roles": {
    "isAssociate": false,
    "isFc": true,
    "isMo": false,
    "isPm": false,
  },
  "startDate": 2022-01-22T00:00:00.000Z,
  "status": 0,
  "statusName": "Live",
  "title": "Allan's Plans",
}
`;
